src/index.css
:root {
    --primary-color: #B6CCDF;
    --secondary-color: #CC8990;
    --text-color: #090909;
    --background-color: white;
}

@font-face {
    font-family: 'NotoSansBold';
    src: url('../src/assets/fonts/NotoSansJP-ExtraBold.ttf') format('truetype');
    font-weight: 600;
    font-style: normal;
}

@font-face {
    font-family: 'NotoSansThin';
    src: url('../src/assets/fonts/NotoSansJP-Light.ttf') format('truetype');
    font-weight: 400;
    font-style: normal;
}

body {
    color: var(--text-color);
    margin: 0;
    font-family: 'CrimsonText', serif;
}

h1 {
    margin: 0;
    font-size: 2em;
    font-family: 'NotoSansBold', serif;
}

.background-wrapper {
    background-image: url('../src/assets/images/background-desktop.png');
    background-size: cover;
    background-position: center;
}

.background-wrapper-light {
    background-image: url('../src/assets/images/background-desktop-light.png');
    background-size: cover;
    background-position: center;
}

.page-wrapper {
    height: 93vh;
    padding: 50px 20px 0px 20px;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 50px;
    text-align: center;
}

button {
    font-family: 'CrimsonText', serif;
    color: var(--text-color);
    padding: 0.7em 1.7em;
    font-size: 1.1em;
    border-radius: 0.5em;
    background: var(--background-color);
    cursor: pointer;
    border: 1px solid var(--primary-color);
    transition: all 0.3s;
    box-shadow: 4px 4px 4px -1px var(--primary-color);
    width: fit-content;
}

button:active {
    color: #666;
    box-shadow: inset 4px 4px 12px var(--primary-color), inset -4px -4px 12px #ffffff;
}

.trainer-page-wrapper {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 50px;
}

.about-trainer {
    padding-top: 2vh;
}

.notes-strings-text {
    font-size: 2.3em;
}

.correct-page-wrapper {
    position: absolute;
    left: 0;
    top: 0;
    width: 100vw;
    height: 100vh;
    text-align: center;
    background-color: rgb(0, 0, 0, 0.3);
    font-size: 100px;
    color: white;

    /* animation – fade in and out */
    -webkit-animation: fadeinout 0.5s ease-in-out forwards;
    animation: fadeinout 1s ease-in-out forwards;

    div {
        margin-top: 30vh;
    }
}

@-webkit-keyframes fadeinout {
    0%,
    100% {
        opacity: 0;
    }
    50% {
        opacity: 1;
    }
}

@keyframes fadeinout {
    0%,
    100% {
        opacity: 0;
    }
    50% {
        opacity: 1;
    }
}

input:hover {
    cursor: pointer;
}

.frequency {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 10px;
}

.frequency-wrapper {
    display: flex;
    gap: 10px;
}

.frequency-text {
    width: 120px;
    text-align: right;
}

.inputs-wrapper {
    display: flex;
    flex-direction: column;
    gap: 25px;
    color: var(--text-color);
    padding: 0.7em 1.7em;
    min-width: 400px;
    font-size: 1em;
    border-radius: 0.5em;
    background: var(--background-color);
    border: 1px solid var(--primary-color);
    transition: all 0.3s;
    box-shadow: 2px 2px 6px var(--primary-color), -2px -2px 6px #ffffff;
}

.header-inputs {
    font-weight: 600;
    padding-bottom: 10px;
}

.notes-wrapper,
.strings-wrapper,
.scale-wrapper {
    display: flex;
    justify-content: center;
    gap: 15px;
}

.notes-wrapper {
    flex-direction: row;
    flex-wrap: wrap;
    max-width: 400px;
}

.frequency-input-wrapper {
    display: flex;
    flex-direction: column;
    gap: 20px;
    padding-top: 20px;
}

input[type='radio'], input[type="checkbox"] {
    accent-color: var(--secondary-color);
}

@media only screen and (max-width: 480px) {
    h1 {
        font-size: 1.4em;
    }
}

@media only screen and (max-width: 600px) {
    .background-wrapper {
        background-image: url('../src/assets/images/background-mobile.png');
    }

    .background-wrapper-light {
        background-image: url('../src/assets/images/background-mobile-light.png');
    }

    .page-wrapper {
        height: 95vh;
    }

    .inputs-wrapper {
        min-width: auto;
    }

    .trainer-page-wrapper {
        gap: 50px;
    }

    .notes-strings-text {
        font-size: 1.9em;
    }

    .inputs-wrapper {
        padding: 0.7em 1em;
    }
}

